--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "d3": "^5.9.1",
     "express": "^4.16.4",
+    "hyphenopoly": "^2.7.0",
     "languagedetect": "^1.2.0",
     "npm": "^6.7.0",
     "request": "^2.88.0",
