--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "cheerio": "^1.0.0-rc.2",
+    "cheerio-html-to-text": "^0.4.4",
     "cors": "^2.8.5",
     "d3": "^5.9.1",
     "express": "^4.16.4",
+    "googleapis": "^37.2.0",
     "hyphenopoly": "^2.7.0",
     "languagedetect": "^1.2.0",
     "npm": "^6.7.0",
