--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "client": "parcel ./client/index.html ./client/hola.html",
+    "client": "parcel ./client/index.html ./client/index.html",
     "//": "al darle mas de una entrada a parcel,se sirven multiples archivos en localhost:1234",
     "server": "nodemon ./server/app.js",
     "start": "concurrently \"npm run server\" \"npm run client\""
